--- a/app/frontend/src/pages/home/styles/styles.css
+++ b/app/frontend/src/pages/home/styles/styles.css
@@ -1,7 +1,42 @@
-.page-home {
-  align-items: center;
+.home-page {
   display: flex;
-  height: 100vh;
-  justify-content: center;
+  flex-direction: column;
   width: 100%;
+}
+
+.thead-id {
+  width: 10%;
+}
+
+.thead-title {
+  width: 30%;
+}
+
+.thead-content {
+  width: 40%;
+}
+
+.thead-status {
+  width: 10%;
+}
+
+.tbody-buttons {
+  display: flex;
+  justify-content: space-around;
+}
+
+.task-form {
+  background-color: rgb(46, 41, 41);
+  color: rgb(219, 215, 215);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.task-form-edit {
+  background-color: rgb(30, 124, 43);
+  color: rgb(219, 215, 215);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
