--- a/app/frontend/src/pages/User/styles/styles.css
+++ b/app/frontend/src/pages/User/styles/styles.css
@@ -7,7 +7,7 @@
 }
 
 .title-user {
-  color: rgba(22, 102, 139, 0.938);
+  color: #fff;
   font-size: xx-large;
   font-weight: 900;
   padding: 20px;
